@@ -12,6 +12,7 @@ typedef enum
     SUB_Z80,
     SUB_Z180,
     SUB_R2K,
+    SUB_R2KA,
     SUB_R3KA,
     SUB_GBZ80,
     SUB_TLCS90,
@@ -38,6 +39,7 @@ extern Z80_OPTS z80_opts;
 #define IS_Z80 (z80_opts.sub == SUB_Z80)
 #define IS_Z180 (z80_opts.sub == SUB_Z180)
 #define IS_R2K (z80_opts.sub == SUB_R2K)
+#define IS_R2KA (z80_opts.sub == SUB_R2KA)
 #define IS_R3KA (z80_opts.sub == SUB_R3KA)
 #define IS_RAB (IS_R2K || IS_R3KA)
 #define IS_GB (z80_opts.sub == SUB_GBZ80)
